--- a/TrajvRegister10.csproj
+++ b/TrajvRegister10.csproj
@@ -245,6 +245,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="pictures\background.jpg" />
     <Content Include="pictures\flag-et.gif" />
     <Content Include="pictures\kat.jpg" />
     <Content Include="pictures\uk-flag.jpg" />
